--- a/index.html
+++ b/index.html
@@ -81,7 +81,24 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="design-skills">
+                        <div class="skill">
+                            <div class="skill-top">
+                                <span class="name">Web Design</span>
+                                <span class="percent">95%</span>
+                            </div>
+                            <div class="skill-bottom">
+                                <div class="progress"><span class="bar" style="width: 95%;"></span></div>
+                            </div>
+                            <div class="skill-top">
+                                <span class="name">running</span>
+                                <span class="percent">34%</span>
+                            </div>
+                            <div class="skill-bottom">
+                                <div class="progress"><span class="bar" style="width: 34%;"></span></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </section>
