--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <div class="progress"><span class="bar" style="width: 95%;"></span></div>
                             </div>
                             <div class="skill-top">
-                                <span class="name">running</span>
+                                <span class="name">Running</span>
                                 <span class="percent">34%</span>
                             </div>
                             <div class="skill-bottom">
@@ -99,7 +99,42 @@
                             </div>
                         </div>
                     </div>
+                    <div class="timeline">
+                        <div class="item">
+                            <div class="date">
+                                <p class="year">2023</p>
+                                <p class="place">Codebrainers</p>
+                            </div>
+                            <div class="bar">
+                                <div class="dot"></div>
+                            </div>
+                            <div class="info">
+                                <p class="title">Fullstack</p>
+                                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                    Beatae, corrupti? Quibusdam in iusto ipsa distinctio aspernatur accusantium cumque
+                                    sunt debitis. Similique rerum aliquam libero suscipit aliquid explicabo modi
+                                    inventore veritatis?</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="date">
+                                <p class="year">2023</p>
+                                <p class="place">Codebrainers</p>
+                            </div>
+                            <div class="bar">
+                                <div class="dot"></div>
+                            </div>
+                            <div class="info">
+                                <p class="title">Fullstack</p>
+                                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                    Beatae, corrupti? Quibusdam in iusto ipsa distinctio aspernatur accusantium cumque
+                                    sunt debitis. Similique rerum aliquam libero suscipit aliquid explicabo modi
+                                    inventore veritatis?</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
 
             </section>
 
